# household

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/: config.py  main.py
api/connectors/: presets.py  rest.py
api/routes/: agent.py  auth.py  connections.py  dashboard.py
api/schemas/dto/: agent.py  connection.py  dashboard.py
api/schemas/orm/: chat.py  connection.py  dashboard.py  user.py
api/services/: agent.py  dashboard.py  scheduler.py
api/utils/: auth.py  crypto.py
frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/agent/: AgentView.tsx  ChatMessage.tsx
frontend/src/components/auth/: Login.tsx  Register.tsx
frontend/src/components/dashboard/: CalendarWidget.tsx  DashboardView.tsx  QuickActions.tsx  TasksWidget.tsx
frontend/src/components/layout/: AppLayout.tsx
frontend/src/components/settings/: ConnectionForm.tsx  SettingsView.tsx
frontend/src/hooks/: useRouter.ts
frontend/src/types/: index.ts
