[project]
name = "household"
version = "0.1.0"
description = "Household management dashboard"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "beanie>=1.25.0",
    "motor>=3.3.0",
    "pydantic[email]>=2.5.0",
    "pydantic-settings>=2.1.0",
    "PyJWT>=2.8.0",
    "argon2-cffi>=23.1.0",
    "python-multipart>=0.0.6",
    "httpx>=0.26.0",
    "anthropic>=0.40.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]
